Added the New Reseller Email page, for setting up a message to be sent to new reseller accounts.
Added the --email parameter to create-reseller.pl and modify-reseller.pl scripts.
Updated many script installers to support PHP 5.
All autoreply email message files are now hard linked to from /var/virtualmin-autoreply, and this path is used in the autoresponders. This allows them to continue working even when a domain's home directory is not world-readable.
Fixed bug that broke renaming of virtual servers when using debian-style sites-enabled directory for the Apache config.
Fixed bug that prevented autoresponders from being updated properly when renaming or moving virtual servers.
Fixed the Nucleus script installer so that it actually works, and increased version to 3.24.
Fixed the b2evolution script installer to correctly use it's built-in scripts for setting up the config files and database.
---- Changes since 3.36 ----
Increased version of Gallery script installer to 2.2-rc-2, ZenPhoto to 1.0.8.2, WebCalendar to 1.0.5, and TWiki to 4.1.2.
Change the Module Config option for the Upload and Download module to limit to uploads only.
Replaced the HTMLarea widget for editing web pages with Xinha, when using Webmin 1.332 or later.
Broke the Bandwidth Monitoring page down into collapsible sections.
Added a new page for regularly updating a dynamic IP address, for systems where the primary IP is not static.
Updated the 'Show system information on main page?' Module Config option to allow display for resellers too.
Autoreply message recipient tracking files are now stored in /var/virtualmin-autoreply, so that they can be accessed by the mail server when a virtual server's home is not world-readable.
Plugin modules can now have help links on the virtual server creation and editing pages.