@@ -3,15 +3,7 @@
 
 package virtual_server;
 $main::no_acl_check++;
-$ENV{'WEBMIN_CONFIG'} ||= "/etc/webmin";
-$ENV{'WEBMIN_VAR'} ||= "/var/webmin";
-if ($0 =~ /^(.*\/)[^\/]+$/) {
-	chdir($1);
-	}
-chop($pwd = `pwd`);
-$0 = "$pwd/spamclear.pl";
 require './virtual-server-lib.pl';
-$< == 0 || die "spamclear.pl must be run as root";
 &foreign_require("mailboxes", "mailboxes-lib.pl");
 
 foreach $d (&list_domains()) {
