@@ -541,3 +541,4 @@ Added a new page for regularly updating a dynamic IP address, for systems where 
 Updated the 'Show system information on main page?' Module Config option to allow display for resellers too.
 Autoreply message recipient tracking files are now stored in /var/virtualmin-autoreply, so that they can be accessed by the mail server when a virtual server's home is not world-readable.
 Plugin modules can now have help links on the virtual server creation and editing pages.
+Added tabs to the Manage SSL Certificate page.
